--- a/index.html
+++ b/index.html
@@ -158,8 +158,9 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="md-mb30">
-                                    <h6 class="sub-title wow" data-splitting>Know Me Better</h6>
-                                    <h2 class="extra-title wow" data-splitting>always Love to create, with a keen eye
+                                    <h6 class="sub-title wow" data-splitting data-wow-delay=".1s">Know Me Better</h6>
+                                    <h2 class="wow fadeIn">always Love to
+                                        create, with a keen eye
                                         for
                                         detail.
                                     </h2>
@@ -167,12 +168,14 @@
                             </div>
                             <div class="col-lg-5 offset-lg-1 valign">
                                 <div class="full-width">
-                                    <p class="wow txt" data-splitting>To create something out of nowwhere is a source
+                                    <p class="wow fadeIn">To create something out of
+                                        nowwhere is a source
                                         of joy for me. actualizing my peculiar thoughts puts my mind at ease. on top of
                                         that, to be able to help others make their visions come to life brings more
                                         meaning to everything i create.
                                     </p>
-                                    <a href="#0" class="kmore wow" data-splitting><span>Know More</span></a>
+                                    <h3 class="kmore wow" data-splitting data-wow-delay=".1s"><span>Know More</span>
+                                    </h3>
                                 </div>
                             </div>
                         </div>
@@ -185,13 +188,11 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-12 positive-r">
-                                <div class="slider-for wow fadeInUp" data-wow-delay=".1s">
-                                    <div class="info">
-                                        <div class="author">
-                                            <img src="img/home/profile.jpg" alt="">
-                                        </div>
-                                        <!-- <h6><span>Social Media Accounts</span> </h6> -->
+                                <div class="info">
+                                    <div class="author">
+                                        <img src="img/home/profile.jpg" alt="">
                                     </div>
+                                    <!-- <h6><span>Social Media Accounts</span> </h6> -->
                                 </div>
                             </div>
 
@@ -240,14 +241,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="navs wow fadeIn" data-wow-delay=".1s">
-                        <span class="next cursor-pointer">
-                            <i></i>
-                        </span>
-                        <span class="prev cursor-pointer">
-                            <i></i>
-                        </span>
-                    </div>
                 </section>
 
                 <!-- ==================== End Testimonials ==================== -->
@@ -266,7 +259,7 @@
                         <div class="col-lg-12">
                             <div class="section-head text-center">
                                 <h6 class="wow" data-splitting>Awesome Works</h6>
-                                <h3 class="wow" data-splitting>My Creative Works.</h3>
+                                <h3 class="wow" data-splitting>Creative Works.</h3>
                             </div>
                         </div>
 
@@ -285,27 +278,25 @@
 
                             <!-- gallery item -->
                             <div class="items photo">
-                                <div class="item-img wow fadeInUp" data-wow-delay=".4s">
-                                    <a href="https://www.instagram.com/ambakero.ph/?hl=en" target="blank">
-                                        <!-- <picture>
+                                <a href="https://www.instagram.com/ambakero.ph/?hl=en" target="blank">
+                                    <!-- <picture>
                                             <source type="image/webp" srcset="img/portfolio/project/webp/loading.webp">
                                             <source type="image/jpg" srcset="img/portfolio/project/ambakero.jpg">
                                             <img src="img/portfolio/project/ambakero.jpg"
                                                 alt="Galerio Environmental Consultancy">
                                         </picture> -->
-                                        <img src="img/portfolio/project/ambakero-test.jpg" alt="image">
-                                        <div class="item-img-overlay valign">
-                                            <div class="overlay-info full-width">
-                                                <h5>Ambakero <br> Product photoshoot</h5>
-                                            </div>
+                                    <img src="img/portfolio/project/ambakero-test.jpg" alt="image">
+                                    <div class="item-img-overlay valign">
+                                        <div class="overlay-info full-width">
+                                            <h5>Ambakero <br> Product photoshoot</h5>
                                         </div>
-                                    </a>
-                                </div>
+                                    </div>
+                                </a>
                             </div>
 
                             <!-- gallery item -->
                             <div class="items graphic">
-                                <div class="item-img wow fadeInUp" data-wow-delay=".4s">
+                                <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="https://www.instagram.com/p/B-jtMW_ANyQ/" target="blank">
                                         <img src="img/portfolio/project/3doughnut.jpg" alt="image">
                                         <div class="item-img-overlay valign">
@@ -320,7 +311,7 @@
 
                             <!-- gallery item -->
                             <div class="items video">
-                                <div class="item-img wow fadeInUp" data-wow-delay=".4s">
+                                <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="project/project-paid-details.html">
                                         <img src="img/portfolio/project/projects-test.jpg" alt="image">
                                         <div class="item-img-overlay valign">
@@ -335,7 +326,7 @@
 
                             <!-- gallery item -->
                             <div class="items graphic">
-                                <div class="item-img wow fadeInUp" data-wow-delay=".4s">
+                                <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="https://one2infinity.org" target="blank">
                                         <img src="img/portfolio/project/redfoot-print.jpg" alt="image">
                                         <div class="item-img-overlay valign">
@@ -350,7 +341,7 @@
 
                             <!-- gallery item -->
                             <div class="items video">
-                                <div class="item-img wow fadeInUp" data-wow-delay=".4s">
+                                <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="project/takna-details.html">
                                         <img src="img/portfolio/project/takna.jpg" alt="image">
                                         <div class="item-img-overlay valign">
@@ -365,7 +356,7 @@
 
                             <!-- gallery item -->
                             <div class="items video">
-                                <div class="item-img wow fadeInUp" data-wow-delay=".4s">
+                                <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="project/davao-light-details.html">
                                         <img src="img/portfolio/project/gasa.jpg" alt="image">
                                         <div class="item-img-overlay valign">
@@ -379,7 +370,7 @@
 
                             <!-- gallery item -->
                             <div class="items graphic">
-                                <div class="item-img wow fadeInUp" data-wow-delay=".4s">
+                                <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="https://www.instagram.com/p/B4rglTIAb_O/" target="blank">
                                         <img src="img/portfolio/project/vizuapp.jpg" alt="image">
                                         <div class="item-img-overlay valign">
@@ -394,7 +385,7 @@
 
                             <!-- gallery item -->
                             <div class="items video">
-                                <div class="item-img wow fadeInUp" data-wow-delay=".4s">
+                                <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="project/jas-details.html">
                                         <img src="img/portfolio/project/jas.jpg" alt="image">
                                         <div class="item-img-overlay valign">
@@ -408,7 +399,7 @@
 
                             <!-- gallery item -->
                             <div class="items video">
-                                <div class="item-img wow fadeInUp" data-wow-delay=".4s">
+                                <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="project/yabi-details.html">
                                         <img src="img/portfolio/project/yabi.jpg" alt="image">
                                         <div class="item-img-overlay valign">
@@ -422,7 +413,7 @@
 
                             <!-- gallery item -->
                             <div class="items graphic">
-                                <div class="item-img wow fadeInUp" data-wow-delay=".4s">
+                                <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="http://jobgallery.com" target="blank">
                                         <img src="img/portfolio/project/jobgallery.jpg" alt="image">
                                         <div class="item-img-overlay valign">
@@ -438,7 +429,7 @@
 
                             <!-- gallery item -->
                             <div class="items graphic">
-                                <div class="item-img wow fadeInUp" data-wow-delay=".4s">
+                                <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <!-- <a href="project-details.html"> -->
                                     <img src="img/portfolio/project/minutiae.jpg" alt="image">
                                     <div class="item-img-overlay valign">
