--- a/index.html
+++ b/index.html
@@ -278,20 +278,22 @@
 
                             <!-- gallery item -->
                             <div class="items photo">
-                                <a href="https://www.instagram.com/ambakero.ph/?hl=en" target="blank">
-                                    <!-- <picture>
+                                <div class="item-img wow fadeInUp" data-wow-delay=".1s">
+                                    <a href="https://www.instagram.com/ambakero.ph/?hl=en" target="blank">
+                                        <!-- <picture>
                                             <source type="image/webp" srcset="img/portfolio/project/webp/loading.webp">
                                             <source type="image/jpg" srcset="img/portfolio/project/ambakero.jpg">
                                             <img src="img/portfolio/project/ambakero.jpg"
                                                 alt="Galerio Environmental Consultancy">
                                         </picture> -->
-                                    <img src="img/portfolio/project/ambakero-test.jpg" alt="image">
-                                    <div class="item-img-overlay valign">
-                                        <div class="overlay-info full-width">
-                                            <h5>Ambakero <br> Product photoshoot</h5>
+                                        <img src="img/portfolio/project/ambakero-test.jpg" alt="image">
+                                        <div class="item-img-overlay valign">
+                                            <div class="overlay-info full-width">
+                                                <h5>Ambakero <br> Product photoshoot</h5>
+                                            </div>
                                         </div>
-                                    </div>
-                                </a>
+                                    </a>
+                                </div>
                             </div>
 
                             <!-- gallery item -->
@@ -404,7 +406,7 @@
                                         <img src="img/portfolio/project/yabi.jpg" alt="image">
                                         <div class="item-img-overlay valign">
                                             <div class="overlay-info full-width">
-                                                <h5>STI DIRECTORS CUT 201</h5>
+                                                <h5>STI DIRECTORS CUT 2019</h5>
                                             </div>
                                         </div>
                                     </a>
