fix social site icons and remove comments on codes

--- a/index.html
+++ b/index.html
@@ -1,35 +1,20 @@
 <!DOCTYPE html>
 <html lang="zxx">
-
 <head>
-
-    <!-- Metas -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="keywords" content="nathanmuyx | official site" />
     <meta name="description" content="nathanmuyx | official site" />
     <meta name="author" content="" />
-
-    <!-- Title  -->
     <title>nathanmuyx | official site</title>
-
-    <!-- Favicon -->
     <link rel="shortcut icon" href="img/home/favicon.ico" />
-
-    <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css?family=Barlow+Condensed:100,200,300,400,500,600,700,800,900&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap"
-        rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
     <!-- Plugins -->
     <link rel="stylesheet" href="css/plugins.css" />
-
     <!-- Core Style Css -->
     <link rel="stylesheet" href="css/style.css" />
-
     <style>
         .btn-cv {
             box-shadow: 16px 16px 0px #202125 !important;
@@ -44,21 +29,11 @@
             margin-left: 5px;
         }
     </style>
-
 </head>
-
 <body class="light">
-
-    <!-- ==================== Start Loading ==================== -->
-
     <div id="preloader">
         <div class="loading-text">NYMX</div>
     </div>
-
-    <!-- ==================== End Loading ==================== -->
-
-
-    <!-- ==================== Start progress-scroll-button ==================== -->
 
     <div class="progress-wrap cursor-pointer">
         <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
@@ -66,73 +41,15 @@
         </svg>
     </div>
 
-    <!-- ==================== End progress-scroll-button ==================== -->
-
-
-    <!-- ==================== Start Navgition ==================== -->
-
     <div id="navi" class="topnav">
         <div class="container-fluid">
             <div class="logo">
                 <a href="#0"><img src="img/home/logo-light.png" alt=""></a>
             </div>
-            <!-- <div class="menu-icon">
-                <span class="icon">
-                    <i></i>
-                    <i></i>
-                </span>
-                <span class="text" data-splitting>Menu</span>
-            </div> -->
         </div>
     </div>
-
-    <!-- <div class="hamenu">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-9 col-md-8">
-                    <div class="menu-links">
-                        <ul class="main-menu">
-                            <li>
-                                <div class="o-hidden">
-                                    <a href="index.html" class="link"><span class="nm"></span>Home</a>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-4">
-                    <div class="cont-info">
-                        <div class="item">
-                            <h6>Phone :</h6>
-                            <p>+0 762-2367-723</p>
-                        </div>
-                        <div class="item">
-                            <h6>Address :</h6>
-                            <p>541 Melville Ave, Palo Alto, CA 94301,
-                                ask@ohio.colabr.io</p>
-                        </div>
-                        <div class="item">
-                            <h6>Email :</h6>
-                            <p>Wevo_website@gmail.com</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-
-    <!-- ==================== End Navgition ==================== -->
-
-
-    <!-- ==================== Start wrapper ==================== -->
-
     <div class="wrapper">
-
-
         <div class="main space-bottom">
-
-
-            <!-- ==================== Start Slider ==================== -->
             <section class="page-header proj-det bg-img parallaxie valign text-center" data-overlay-dark="3"
                 data-background="img/home/bg2.jpg">
                 <div class="container">
@@ -146,12 +63,6 @@
                     </div>
                 </div>
             </section>
-
-            <!-- ==================== Start Slider ==================== -->
-
-
-            <!-- ==================== Start About agency ==================== -->
-
             <section class="about section-padding blck">
                 <div class="intro mb-80">
                     <div class="container">
@@ -181,8 +92,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- ==================== Start Testimonials ==================== -->
-
                 <section class="testimonials testim-bg section-padding bg-img parallaxie" data-overlay-dark="7"
                     data-background="img/home/video-wrapper.jpg">
                     <div class="container">
@@ -192,45 +101,43 @@
                                     <div class="author">
                                         <img src="img/home/profile.jpg" alt="">
                                     </div>
-                                    <!-- <h6><span>Social Media Accounts</span> </h6> -->
                                 </div>
                             </div>
-
                             <div class="col-lg-12 quote-text">
                                 <div class="col-lg-10 offset-lg-1">
                                     <div class="row">
-                                        <div class="col-lg-3 items text-center">
+                                        <div class="col-lg-3 col-md-3 col-sm-3 col-3 items text-center">
                                             <a href="https://www.facebook.com/nathanmuyx/" target="blank">
                                                 <div class="item wow fadeIn " data-wow-delay=".1s">
                                                     <span class="fab fa-facebook-f fa-2x"></span>
                                                 </div>
                                             </a>
                                         </div>
-                                        <div class="col-lg-3 items text-center">
+                                        <div class="col-lg-3 col-md-3 col-sm-3 col-3 items text-center">
                                             <a href="https://www.instagram.com/nathanmuyx/?hl=en/" target="blank">
                                                 <div class="item wow fadeIn" data-wow-delay=".1s">
                                                     <span class="fab fa-instagram fa-2x"></span>
                                                 </div>
                                             </a>
                                         </div>
-                                        <div class="col-lg-3 items text-center">
+                                        <div class="col-lg-3 col-md-3 col-sm-3 col-3 items text-center">
                                             <a href="https://twitter.com/nathanmuyxs" target="blank">
                                                 <div class="item wow fadeIn" data-wow-delay=".1s">
                                                     <span class="fab fa-twitter fa-2x"></span>
                                                 </div>
                                             </a>
                                         </div>
-                                        <div class="col-lg-3 items text-center">
+                                        <div class="col-lg-3 col-md-3 col-sm-3 col-3 items text-center">
                                             <a href="https://www.youtube.com/channel/UCXk-pFipfJkLqQeCdKLVqVQ?view_as=subscriber"
                                                 target="blank">
                                                 <div class="item wow fadeIn" data-wow-delay=".1s">
                                                     <span class="fab fa-youtube fa-2x"></span>
                                                 </div>
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-
                             <div class="col-lg-12 quote-text item wow fadeIn" data-wow-delay=".1s">
                                 <a href="files/nathanmuyx.pdf" target="blank">
                                     <button class="btn btn-default btn-cv">
@@ -242,28 +149,16 @@
                         </div>
                     </div>
                 </section>
-
-                <!-- ==================== End Testimonials ==================== -->
             </section>
-
-            <!-- ==================== End About agency ==================== -->
-
-
-
-            <!-- ==================== Start Works ==================== -->
-
             <section class="portfolio section-padding">
                 <div class="container-fluid">
                     <div class="row">
-
                         <div class="col-lg-12">
                             <div class="section-head text-center">
                                 <h6 class="wow" data-splitting>Awesome Works</h6>
                                 <h3 class="wow" data-splitting>Creative Works.</h3>
                             </div>
                         </div>
-
-                        <!-- filter links -->
                         <div class="filtering col-12">
                             <div class="filter">
                                 <span data-filter='*' class="active">All</span>
@@ -272,20 +167,10 @@
                                 <span data-filter='.photo'>Photo</span>
                             </div>
                         </div>
-
-                        <!-- gallery -->
                         <div class="gallery full-width">
-
-                            <!-- gallery item -->
                             <div class="items photo">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="https://www.instagram.com/ambakero.ph/?hl=en" target="blank">
-                                        <!-- <picture>
-                                            <source type="image/webp" srcset="img/portfolio/project/webp/loading.webp">
-                                            <source type="image/jpg" srcset="img/portfolio/project/ambakero.jpg">
-                                            <img src="img/portfolio/project/ambakero.jpg"
-                                                alt="Galerio Environmental Consultancy">
-                                        </picture> -->
                                         <img src="img/portfolio/project/ambakero-test.jpg" alt="image">
                                         <div class="item-img-overlay valign">
                                             <div class="overlay-info full-width">
@@ -295,8 +180,6 @@
                                     </a>
                                 </div>
                             </div>
-
-                            <!-- gallery item -->
                             <div class="items graphic">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="https://www.instagram.com/p/B-jtMW_ANyQ/" target="blank">
@@ -310,8 +193,6 @@
                                     </a>
                                 </div>
                             </div>
-
-                            <!-- gallery item -->
                             <div class="items video">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="project/project-paid-details.html">
@@ -324,9 +205,6 @@
                                     </a>
                                 </div>
                             </div>
-
-
-                            <!-- gallery item -->
                             <div class="items graphic">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="https://one2infinity.org" target="blank">
@@ -340,8 +218,6 @@
                                     </a>
                                 </div>
                             </div>
-
-                            <!-- gallery item -->
                             <div class="items video">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="project/takna-details.html">
@@ -355,8 +231,6 @@
                                     </a>
                                 </div>
                             </div>
-
-                            <!-- gallery item -->
                             <div class="items video">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="project/davao-light-details.html">
@@ -369,8 +243,6 @@
                                     </a>
                                 </div>
                             </div>
-
-                            <!-- gallery item -->
                             <div class="items graphic">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="https://www.instagram.com/p/B4rglTIAb_O/" target="blank">
@@ -384,8 +256,6 @@
                                     </a>
                                 </div>
                             </div>
-
-                            <!-- gallery item -->
                             <div class="items video">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="project/jas-details.html">
@@ -398,8 +268,6 @@
                                     </a>
                                 </div>
                             </div>
-
-                            <!-- gallery item -->
                             <div class="items video">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="project/yabi-details.html">
@@ -412,8 +280,6 @@
                                     </a>
                                 </div>
                             </div>
-
-                            <!-- gallery item -->
                             <div class="items graphic">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="http://jobgallery.com" target="blank">
@@ -427,35 +293,20 @@
                                     </a>
                                 </div>
                             </div>
-
-
-                            <!-- gallery item -->
                             <div class="items graphic">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".1s">
-                                    <!-- <a href="project-details.html"> -->
                                     <img src="img/portfolio/project/minutiae.jpg" alt="image">
                                     <div class="item-img-overlay valign">
                                         <div class="overlay-info full-width">
                                             <h5>SHS Thesis <br> Mobile Application Trivia Game</h5>
                                         </div>
                                     </div>
-                                    <!-- </a> -->
                                 </div>
                             </div>
-
-
-
                         </div>
                     </div>
                 </div>
             </section>
-
-            <!-- ==================== End Works ==================== -->
-
-
-
-            <!-- ==================== Start Services ==================== -->
-
             <section class="services-grid section-padding blck">
                 <div class="container">
                     <div class="row">
@@ -494,15 +345,7 @@
                     </div>
                 </div>
             </section>
-
-            <!-- ==================== End Services ==================== -->
-
-
         </div>
-
-
-        <!-- ==================== Start footer ==================== -->
-
         <footer class="footer fixed">
             <section class="call-action section-padding bg-gray">
                 <div class="container">
@@ -513,11 +356,6 @@
                                 <h2>about your <b>next project</b>.</h2>
                             </div>
                         </div>
-
-                        <!-- <div class="col-md-4 col-lg-3 valign">
-                            <a href="contact.html" class="btn-curve btn-lit"><span>Get In Touch</span></a>
-                        </div> -->
-
                     </div>
                     <div class="row mt-50">
                         <div class="col-lg-4">
@@ -552,36 +390,15 @@
                 </div>
             </div>
         </footer>
-
-        <!-- ==================== End footer ==================== -->
-
     </div>
-
-    <!-- ==================== End wrapper ==================== -->
-
-
-
-    <!-- ==================== Start cursor ==================== -->
-
     <div class="mouse-cursor cursor-outer"></div>
     <div class="mouse-cursor cursor-inner"></div>
-
-    <!-- ==================== End cursor ==================== -->
-
-
-
-
     <!-- jQuery -->
     <script src="js/jquery-3.0.0.min.js"></script>
     <script src="js/jquery-migrate-3.0.0.min.js"></script>
-
     <!-- plugins -->
     <script src="js/plugins.js"></script>
-
     <!-- custom scripts -->
     <script src="js/scripts.js"></script>
-
-
 </body>
-
 </html>
