jsp + davao light optimized

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zxx">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,8 +10,11 @@
     <meta name="author" content="" />
     <title>nathanmuyx | official site</title>
     <link rel="shortcut icon" href="img/home/favicon.ico" />
-    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Barlow+Condensed:100,200,300,400,500,600,700,800,900&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap"
+        rel="stylesheet">
     <!-- Plugins -->
     <link rel="stylesheet" href="css/plugins.css" />
     <!-- Core Style Css -->
@@ -30,6 +34,7 @@
         }
     </style>
 </head>
+
 <body class="light">
     <div id="preloader">
         <div class="loading-text">NYMX</div>
@@ -168,6 +173,18 @@
                             </div>
                         </div>
                         <div class="gallery full-width">
+                            <div class="items graphic">
+                                <div class="item-img wow fadeInUp" data-wow-delay=".1s">
+                                    <a href="https://www.instagram.com/ambakero.ph/?hl=en" target="blank">
+                                        <img src="img/portfolio/project/jsp-logo.jpg" alt="image">
+                                        <div class="item-img-overlay valign">
+                                            <div class="overlay-info full-width">
+                                                <h5>JSP <br>logo</h5>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
                             <div class="items photo">
                                 <div class="item-img wow fadeInUp" data-wow-delay=".1s">
                                     <a href="https://www.instagram.com/ambakero.ph/?hl=en" target="blank">
@@ -401,4 +418,5 @@
     <!-- custom scripts -->
     <script src="js/scripts.js"></script>
 </body>
+
 </html>
